imp - Unload mod assemblies on shutdown
---

When the mod is done with, we'll need to actually unload the mod assemblies
to release handles on them.

Currently, only mods that don't use kernel configuration manager support
unloading. We'll explore ways to work on it in the next few releases.

---

Type: imp
Breaking: No
Doc Required: No
Backport Required: No
AI Assisted: No
Part: 1/1

--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.ar.resx
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.ar.resx
@@ -423,5 +423,8 @@
   <data name="NKS_MODS_MANTUI_HELP01_BODY" xml:space="preserve">
     <value>قد تأتي صفحات الدليل مرفقة مع تعديلاتك، في حال كانت توفر لك مساعدة إضافية، كل ذلك في مكان واحد. يمكنك استخدام هذه الواجهة التفاعلية لعرض صفحات الدليل بشكل أكثر تفاعلية.</value>
   </data>
+  <data name="NKS_MODS_CANTSTOP" xml:space="preserve">
+    <value>لا يمكن إيقاف التعديل {0}</value>
+  </data>
 
 </root>
