--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.el.resx
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.el.resx
@@ -423,5 +423,8 @@
   <data name="NKS_MODS_MANTUI_HELP01_BODY" xml:space="preserve">
     <value>Οι σελίδες εγχειριδίου ενδέχεται να συνοδεύουν τα mods σας, σε περίπτωση που σας παρέχουν επιπλέον βοήθεια, όλα σε ένα μέρος. Μπορείτε να χρησιμοποιήσετε αυτό το διαδραστικό TUI για να δείτε τις σελίδες εγχειριδίου πιο διαδραστικά.</value>
   </data>
+  <data name="NKS_MODS_CANTSTOP" xml:space="preserve">
+    <value>Δεν είναι δυνατή η διακοπή της τροποποίησης {0}</value>
+  </data>
 
 </root>
