--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/arb-T.json
@@ -439,6 +439,10 @@
     {
       "loc": "NKS_MODS_MANTUI_HELP01_BODY",
       "text": "قد تأتي صفحات الدليل مرفقة مع تعديلاتك، في حال كانت توفر لك مساعدة إضافية، كل ذلك في مكان واحد. يمكنك استخدام هذه الواجهة التفاعلية لعرض صفحات الدليل بشكل أكثر تفاعلية."
+    },
+    {
+      "loc": "NKS_MODS_CANTSTOP",
+      "text": "لا يمكن إيقاف التعديل {0}"
     }
   ]
 }
