--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/chi-T.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/chi-T.json
@@ -421,6 +421,10 @@
     {
       "loc": "NKS_MODS_MANTUI_HELP01_BODY",
       "text": "您的模组可能附带手册页，以便您在需要额外帮助时，在一个地方查看所有手册页。您可以使用此交互式界面以更交互的方式查看手册页。"
+    },
+    {
+      "loc": "NKS_MODS_CANTSTOP",
+      "text": "无法停止模块 {0}"
     }
   ]
 }
