--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/grk.json
@@ -414,6 +414,10 @@
     {
       "loc": "NKS_MODS_MANTUI_HELP01_BODY",
       "text": "Οι σελίδες εγχειριδίου ενδέχεται να συνοδεύουν τα mods σας, σε περίπτωση που σας παρέχουν επιπλέον βοήθεια, όλα σε ένα μέρος. Μπορείτε να χρησιμοποιήσετε αυτό το διαδραστικό TUI για να δείτε τις σελίδες εγχειριδίου πιο διαδραστικά."
+    },
+    {
+      "loc": "NKS_MODS_CANTSTOP",
+      "text": "Δεν είναι δυνατή η διακοπή της τροποποίησης {0}"
     }
   ]
 }
