--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ind-T.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ind-T.json
@@ -413,6 +413,10 @@
     {
       "loc": "NKS_MODS_MANTUI_HELP01_BODY",
       "text": "मैन्युअल पेज आपके मॉड के साथ आ सकते हैं, अगर वे आपको और मदद देते हैं, तो सब एक ही जगह पर। आप इस इंटरैक्टिव TUI का इस्तेमाल करके मैनुअल पेज को ज़्यादा इंटरैक्टिव तरीके से देख सकते हैं।"
+    },
+    {
+      "loc": "NKS_MODS_CANTSTOP",
+      "text": "मॉड {0} को रोका नहीं जा सकता"
     }
   ]
 }
