--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.it.resx
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.it.resx
@@ -423,5 +423,8 @@
   <data name="NKS_MODS_MANTUI_HELP01_BODY" xml:space="preserve">
     <value>Le pagine di manuale potrebbero essere incluse con le mod, nel caso in cui forniscano ulteriore supporto, il tutto in un unico posto. È possibile utilizzare questa interfaccia utente interattiva per visualizzare le pagine di manuale in modo più interattivo.</value>
   </data>
+  <data name="NKS_MODS_CANTSTOP" xml:space="preserve">
+    <value>Impossibile interrompere la mod {0}</value>
+  </data>
 
 </root>
