--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.uk.resx
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.uk.resx
@@ -423,5 +423,8 @@
   <data name="NKS_MODS_MANTUI_HELP01_BODY" xml:space="preserve">
     <value>Сторінки посібника можуть постачатися разом з вашими модами, якщо вони надають вам додаткову допомогу, все в одному місці. Ви можете використовувати цей інтерактивний TUI для більш інтерактивного перегляду сторінок посібника.</value>
   </data>
+  <data name="NKS_MODS_CANTSTOP" xml:space="preserve">
+    <value>Не вдається зупинити мод {0}</value>
+  </data>
 
 </root>
