--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.zh.resx
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/Output/Localizations.zh.resx
@@ -423,5 +423,8 @@
   <data name="NKS_MODS_MANTUI_HELP01_BODY" xml:space="preserve">
     <value>您的模組可能附帶手冊頁，以便在需要額外協助時，請在一個地方查看所有手冊頁。您可以使用此互動式介面以更互動的方式查看手冊頁。</value>
   </data>
+  <data name="NKS_MODS_CANTSTOP" xml:space="preserve">
+    <value>無法停止 mod {0}</value>
+  </data>
 
 </root>
