--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/cnt-T.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/cnt-T.json
@@ -416,6 +416,10 @@
     {
       "loc": "NKS_MODS_MANTUI_HELP01_BODY",
       "text": "您的模組可能附帶手冊頁，以便在需要額外協助時，請在一個地方查看所有手冊頁。您可以使用此互動式介面以更互動的方式查看手冊頁。"
+    },
+    {
+      "loc": "NKS_MODS_CANTSTOP",
+      "text": "無法停止 mod {0}"
     }
   ]
 }
