--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ger.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ger.json
@@ -422,6 +422,10 @@
     {
       "loc": "NKS_MODS_MANTUI_HELP01_BODY",
       "text": "Handbuchseiten sind möglicherweise in Ihren Mods enthalten und bieten Ihnen zusätzliche Hilfestellungen an einem Ort. Mit dieser interaktiven Benutzeroberfläche können Sie die Handbuchseiten interaktiver anzeigen."
+    },
+    {
+      "loc": "NKS_MODS_CANTSTOP",
+      "text": "Das Modul {0} kann nicht gestoppt werden."
     }
   ]
 }
