--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ind.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ind.json
@@ -413,6 +413,10 @@
     {
       "loc": "NKS_MODS_MANTUI_HELP01_BODY",
       "text": "mainyual pej aapake mod ke saath aa sakate hain, agar ve aapako aur madad dete hain, to sab ek hee jagah par. aap is intaraiktiv tui ka istemaal karake mainual pej ko zyaada intaraiktiv tareeke se dekh sakate hain."
+    },
+    {
+      "loc": "NKS_MODS_CANTSTOP",
+      "text": "mod {0} ko roka nahin ja sakata"
     }
   ]
 }
