--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/kor-T.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/kor-T.json
@@ -414,6 +414,10 @@
     {
       "loc": "NKS_MODS_MANTUI_HELP01_BODY",
       "text": "추가적인 도움이 필요한 경우, 매뉴얼 페이지가 모드와 함께 제공될 수 있으며, 모든 기능을 한 곳에서 확인할 수 있습니다. 이 대화형 TUI를 사용하면 매뉴얼 페이지를 더욱 대화형으로 볼 수 있습니다."
+    },
+    {
+      "loc": "NKS_MODS_CANTSTOP",
+      "text": "모드 {0}을(를) 중지할 수 없습니다."
     }
   ]
 }
