--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Mods/Resources/Languages/ukr.json
@@ -413,6 +413,10 @@
     {
       "loc": "NKS_MODS_MANTUI_HELP01_BODY",
       "text": "Сторінки посібника можуть постачатися разом з вашими модами, якщо вони надають вам додаткову допомогу, все в одному місці. Ви можете використовувати цей інтерактивний TUI для більш інтерактивного перегляду сторінок посібника."
+    },
+    {
+      "loc": "NKS_MODS_CANTSTOP",
+      "text": "Не вдається зупинити мод {0}"
     }
   ]
 }
